# Codes

Linear_Algebra/: Eigen_Vectors_Change_of_Basis.ipynb
PyTorch_Tutorials/: .gitignore  1.Tensors_and_Autograd.ipynb  2.DataLoaders_and_Datasets.ipynb  3.Simple_Neural_Network_Example.ipynb  4.MultiClass_Classification.ipynb  5.Transfer_Learning.ipynb  main.py  pyproject.toml  test_validation_package.py
PyTorch_Tutorials/Tutorial1_Exercises/: 1.Tensors_and_Autograd_Exercise.ipynb  2.DataLoaders_and_Datasets_Exercise.ipynb  3.Simple_Neural_Network_Example_Exercise.ipynb  4.MultiClass_Classification_Exercise.ipynb  5.Transfer_Learning_Exercise.ipynb  README_VALIDATION_PACKAGE.md
PyTorch_Tutorials/Tutorial1_Solutions/: 1.Tensors_and_Autograd.ipynb  2.DataLoaders_and_Datasets.ipynb  3.Simple_Neural_Network_Example.ipynb  4.MultiClass_Classification.ipynb  5.Transfer_Learning.ipynb
